fix overlap

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -44,12 +44,12 @@ h4   {
     color: #3D5A80;
 }
 
-#hero-msg h1, #hero-msg h4 {
+#hero h1, #hero h4 {
     text-align: center;
     
 }
 
-#hero-msg {
+#hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     margin-top: -100px;
@@ -57,14 +57,16 @@ h4   {
 
 #hero-box {
     grid-column: 1/4;
-    grid-rows: 1/3;
+    grid-row: 1/3;
     z-index: -1;
 }
 
-#hero-msg2 {
+#hero-msg {
     grid-column: 2/3;
     grid-row: 1/2;
     margin-top: 100px;
+    align-content: center;
+    justify-content: center;
 }
 
              
@@ -86,8 +88,8 @@ h4   {
     font-size: 18px;
     padding: 15px 30px; /* top-bottom, left-right */ /* problem, the button's edge still peaks through*/
     margin-top: 50px;
-
     border-radius: 5px; /*curves the corners */
+    text-align: center
 }
 
 .book:hover, .join:hover {
